--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.16",
-    "framer-motion": "^12.23.24",
+    "date-fns": "^4.1.0",
+    "framer-motion": "^12.23.26",
     "js-cookie": "^3.0.5",
     "lucide-react": "^0.546.0",
     "react": "^19.1.1",
